feat: add fluent queries and explicit entity policies